# rust-mlops-template

./: .gitignore  Makefile  README.md  Untitled.ipynb  cmds.sh  format.sh  lint.sh  setup.sh  test.sh
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: clippy.yml  rust-hello.yml  rust.yml
MarcoPolo/: Cargo.toml
MarcoPolo/src/: lib.rs  main.rs
MarcoPolo/tests/: cli.rs
OnnxDemo/: Cargo.toml  Makefile  README.md
OnnxDemo/src/: lib.rs  main.rs
actixtorch/: Cargo.toml  Dockerfile  Makefile  README.md
actixtorch/src/: lib.rs  main.rs
async-lambda-s3/: Cargo.toml  Makefile  README.md
async-lambda-s3/src/: lib.rs  main.rs
awsmetas3/: Cargo.toml  Makefile
awsmetas3/src/: lib.rs  main.rs
calc-microservice/: Cargo.toml
calc-microservice/src/: lib.rs  main.rs
checksums3/: Cargo.toml  checksums.txt  file1  file2  setupfiles.sh
checksums3/src/: main.rs
clilog/: Cargo.toml
clilog/src/: lib.rs  main.rs
dedupe/: Cargo.toml  Makefile
dedupe/src/: lib.rs  main.rs
distroless-cli/: Cargo.toml  Dockerfile  Makefile  README.md
distroless-cli/src/: main.rs
distroless-web/: Cargo.toml  Dockerfile
distroless-web/src/: main.rs
dscli/: Cargo.toml
dscli/src/: lib.rs  main.rs
efs-lister/: Cargo.toml  Makefile  README.md
efs-lister/src/: main.rs
hello/: Cargo.toml
hello-wasm-bindgen/: Cargo.toml  Makefile  README.md  index.html
hello-wasm-bindgen/src/: lib.rs
hello/src/: main.rs
hello/tests/: cli.rs
hf-qa/: Cargo.toml
hf-qa/src/: lib.rs  main.rs
hfdemo/: Cargo.toml
hfdemo/src/: lib.rs  main.rs
hfqa/: Cargo.toml  README.md
hfqa/src/: main.rs
lambda-heavy-compute/: Cargo.toml  Makefile  README.md
lambdathreads/: Cargo.toml  Makefile  README.md
linfa-kmeans/: Cargo.toml  clustered_dataset.npy  clustered_memberships.npy
linfa-kmeans/src/: lib.rs  main.rs
marco-polo-lambda/: Cargo.toml  Makefile  README.md
new-lambda-project/: Cargo.toml
onnx-efs-lambda/: Cargo.toml  Makefile  README.md
onnx-efs-lambda/src/: lib.rs  main.rs
onnx-ms-squeeznet/: Cargo.toml  Makefile
parallel/: Cargo.toml
polarsdf/: Cargo.toml
pyrust/: Cargo.toml
pytorch-binary-cli/: Cargo.toml  Makefile  README.md
pytorch-rust-docker/: Cargo.toml  Dockerfile  Makefile  README.md
pytorch-rust-example/: Cargo.toml  README.md
regression-cli/: Cargo.toml  README.md
regression-cli/src/: lib.rs  main.rs
rrgame/: Cargo.toml  Makefile  README.md
rrgame/src/: lib.rs  main.rs
rust-aws-lambda/: Cargo.toml  Makefile  README.md
rust-ideas/: Cargo.toml  README.md
sqlite-hf/: Cargo.toml  README.md  lyrics.txt
step-functions-rust/: README.md  stepfunction.JSON
string_sum/: Cargo.toml  Makefile  pyproject.toml  requirements.txt
string_sum/src/: lib.rs
tf-rust-example/: Cargo.toml  Makefile  README.md
tyrscontainer/: Cargo.toml  Dockerfile  Makefile
webdocker/: Cargo.toml  Dockerfile  README.md
(+32 files in other folders)
